[package]
name = "build_rust_with_docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13.1"
actix-redis = "0.13.0"
redis-async = "0.16"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
